<resources>
    <string name="app_name">Inventory Management</string>
    <string name="enter_your_email_id">Enter your Email-ID</string>
    <string name="login_page">Login Page</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_page">Register Page</string>
    <string name="enter_item_price">Enter Item Price</string>
    <string name="add_item_page">Add Items Page</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="enter_item_quantity">Enter Item Quantity</string>
    <string name="save_item">Add Item</string>
    <string name="logout">Logout</string>
    <string name="add_item">Add Item</string>
    <string name="dashboard_title">Inventory Management App</string>
    <string name="item_name">Item Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="update_item">Update Item</string>
    <string name="delete_item">Delete Item</string>
    <string name="edit_item_title">Edit Items</string>
</resources>